--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>jjReceipty — Smart Receipt Parser</title>
+  <title>wwssqqReceipty — Smart Receipt Parser</title>
   <style>
     body {
       margin: 0;
