--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: "Segoe UI", sans-serif;
-      background-color: #a6a6a6 url('https://www.transparenttextures.com/patterns/carbon-fibre-big.png') repeat;
+      background: #a6a6a6 url('https://www.transparenttextures.com/patterns/carbon-fibre-big.png') repeat;
       color: white;
       display: flex;
       justify-content: center;
