--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
 
     body {
       margin: 0;
-      font-family: "Segoe UI", sans-serif;
+      font-family: "Gill Sans", sans-serif;
       color: white;
       display: flex;
       justify-content: center;
@@ -38,7 +38,6 @@
       text-align: center;
       max-width: 400px;
       width: 100%;
-      border: 2px dashed #3d5472;
       cursor: pointer;
       z-index: 1;
     }
@@ -97,7 +96,6 @@
 
   <div class="upload-container" onclick="document.getElementById('file-upload').click();">
     <img src="logo.png" alt="Receiptly Logo" class="logo"/>
-    <div class="upload-icon">⬆️</div>
     <div class="upload-text">DRAG & DROP</div>
     <div class="sub-text">TO UPLOAD</div>
     <input type="file" id="file-upload" class="file-input" />
