--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: #0a1c46;
+      background-color: #212121;
       z-index: -1;
       pointer-events: none;
     }
