--- a/frontend/index.html
+++ b/frontend/index.html
@@ -160,7 +160,7 @@
   <script>
     tsParticles.load("particles-js", {
       background: {
-        color: "#0a1c46"
+        color: "#212121"
       },
       fpsLimit: 60,
       interactivity: {
