--- a/frontend/index.html
+++ b/frontend/index.html
@@ -77,8 +77,8 @@
 
     .upload-btn {
       background-color: transparent; /* make background transparent */
-      color: #3265b3;                /* optional: make text visible */
-      border: 2px solid #3265b3;     /* optional: visible border */
+      color: #C0C0C0;                /* optional: make text visible */
+      border: 2px solid #C0C0C0;     /* optional: visible border */
       padding: 12px 24px;
       font-size: 14px;
       font-weight: bold;
@@ -88,7 +88,7 @@
 
 
     .upload-btn:hover {
-      background-color: #2c5aa1;
+      background-color: #FFFFFF;
     }
   </style>
 </head>
