--- a/frontend/index.html
+++ b/frontend/index.html
@@ -150,8 +150,8 @@
 
   <div class="upload-container">
     <img src="logo.png" alt="Receiptly Logo" class="logo"/>
-    <div class="upload-text">DRAG & DROP</div>
-    <div class="sub-text">TO UPLOAD</div>
+     <!--  <div class="upload-text">DRAG & DROP</div>
+    <div class="sub-text">TO UPLOAD</div> -->
     <input type="file" id="file-upload" class="file-input" />
     <button class="upload-btn" type="button">SELECT FILES</button>
   </div>
